--- a/HR_analysis_GPS_LC_newtags_11July2018.Rmd
+++ b/HR_analysis_GPS_LC_newtags_11July2018.Rmd
@@ -34,6 +34,81 @@ library(ggplot2)
 internet <- FALSE
 # Minimum number of relocations per individual to be included in HR analysis
 min_n <- 50
+
+# a function to create a data frame with minimum number of data points per individual
+# then convert geographic coordinates so HR can be computed. Creates a list of length
+# four. tagproj is the projection definition, which is defined at the end of next chunk
+
+make.HR.dataset <- function(data.all, ID.min_n, tagproj){
+  selected <- dplyr::right_join(data.all, 
+                                ID.min_n, 
+                                by = "ArgosID")
+  
+  all.coords <- data.frame(x=selected$Lon1, 
+                           y=selected$Lat1)
+  
+  coordinates(all.coords) <- ~ x + y
+  proj4string(all.coords) <- CRS(latlong)
+  all.utm <- spTransform(all.coords, tagproj)
+
+  byID.coords <- data.frame(x=selected$Lon1, 
+                            y=selected$Lat1,
+                            ID = as.factor(selected$ArgosID))
+  coordinates(byID.coords) <- ~ x + y
+  proj4string(byID.coords) <- CRS(latlong)
+  byID.utm <- spTransform(byID.coords, tagproj)
+  return(list(all.coords = all.coords,
+              all.utm = all.utm,
+              byID.coords = byID.coords,
+              byID.utm = byID.utm))
+}
+
+HR.bvnorm.fcn <- function(all.utm, 
+                          byID.utm, 
+                          h, 
+                          hlim=c(0.03, 1.5), 
+                          grid=300, extent = 1){
+  
+  all.kd <- kernelUD(all.utm, 
+                     h = h,  
+                     hlim = hlim, 
+                     grid = grid,
+                     extent = extent,
+                     kern = "bivnorm")
+  
+  Area.all <- kernel.area(all.kd, 
+                          percent = c(50, 95),
+                          unin = c("m"),
+                          unout = c("km2"), 
+                          standardize = FALSE)
+
+  byID.kd <- kernelUD(byID.utm, 
+                      h = all.kd@h$h ,  
+                      hlim = hlim, 
+                      grid = grid,
+                      extent = extent,
+                      kern = "bivnorm")
+  
+  Area.byID <- kernel.area(byID.kd, 
+                           percent = c(50, 95),
+                           unin = c("m"),
+                           unout = c("km2"), 
+                           standardize = FALSE)
+
+  bw <- all.kd@h$h ##bandwidth estimate
+  #Area.50 <- Area.all["50"]
+  #Area.95 <- Area.all["95"]
+  
+  #ver.50 <- getverticeshr(all.kd, 50)
+  #ver.95 <- getverticeshr(all.kd, 95)
+  
+  return(list(bw = bw,
+              all.kd = all.kd,
+              byID.kd = byID.kd,
+              area.all = Area.all,
+              area.byID = Area.byID))
+}
+
 ```
 
 Get some base layer maps here:
@@ -272,28 +347,7 @@ pre.all %>% count(by = ArgosID) %>%
   #dplyr::select(by) %>%
   rename(ArgosID = by) -> ID.pre.min_n
 
-pre.selected <- right_join(pre.all, ID.pre.min_n, by = "ArgosID")
-
-# treat all individuals as a group without ID - use all of them to make one HR
-pre.all.coords <- data.frame(x=pre.selected$Lon1, 
-                             y=pre.selected$Lat1)
-
-coordinates(pre.all.coords) <- ~ x + y
-proj4string(pre.all.coords) <- CRS(latlong)
-pre.all.utm <- spTransform(pre.all.coords, tagproj)
-
-#class(pre.all.coords)
-#plot(pre.all.coords, axes=TRUE) ## sanity check
-
-# use those with at least 100:
-# treat all individuals as a group without ID - use all of them
-pre.byID.coords <- data.frame(x = pre.selected$Lon1, 
-                              y = pre.selected$Lat1,
-                              ID = as.factor(pre.selected$ArgosID))
-
-coordinates(pre.byID.coords) <- ~ x + y
-proj4string(pre.byID.coords) <- CRS(latlong)
-pre.byID.utm <- spTransform(pre.byID.coords, tagproj)
+pre.list <- make.HR.dataset(pre.all, ID.pre.min_n, tagproj)
 ```
 
 Do the same with post dataset - choose those with at least min_n data points. 
@@ -304,30 +358,77 @@ post.all %>% count(by = ArgosID) %>%
   #dplyr::select(by) %>%
   rename(ArgosID = by) -> ID.post.min_n
 
-# because there are more post tracks than pre tracks, 5 vs. 11(?), it may make sense to 
-# randomly draw 5 at a time and look at how computed home range changes. You'd think 
-# more turtles means larger home range? 
-
-post.selected <- right_join(post.all, ID.post.min_n, by = "ArgosID")
-
-# remove individuals with small sample size:
-post.all.coords <- data.frame(x=post.selected$Lon1, 
-                              y=post.selected$Lat1)
-coordinates(post.all.coords) <- ~ x + y
-proj4string(post.all.coords) <- CRS(latlong)
-post.all.utm <- spTransform(post.all.coords, tagproj)
-#plot(post.all.utm, axes=TRUE) ## sanity check
-
-post.byID.coords <- data.frame(x=post.selected$Lon1, 
-                                   y=post.selected$Lat1,
-                                   ID = as.factor(post.selected$ArgosID))
-coordinates(post.byID.coords) <- ~ x + y
-proj4string(post.byID.coords) <- CRS(latlong)
-post.byID.utm <- spTransform(post.byID.coords, tagproj)
+post.list <- make.HR.dataset(post.all, ID.post.min_n, tagproj)
 
 ```
 
-Then the home range analysis starts here:
+Then the home range analysis starts here. First we need to figure out the smoothing parameter (bandwidth, h). There seem to be different methods and recommendations...
+
+First, tru least-squares cross validation on the pre data:
+```{r}
+pre.kd.href <- kernelUD(pre.list$all.utm, 
+                   h="href",  
+                   grid=300,
+                   kern = "bivnorm")
+
+pre.kd.LSCV <- kernelUD(pre.list$all.utm, 
+                        h="LSCV",  
+                        hlim = c(0.03, 1.5), 
+                        grid=300,
+                        kern = "bivnorm")
+
+plotLSCV(pre.kd.LSCV)
+
+```
+
+Referecne or optimum bandwidth is ~248 (see pre.kd.href), whereas the LSCV comes back with h = 25.9 (Pre.kd@h$h). According to Kie (2013), we should decrease href in increments of 0.10 and the best value is the smallest increment of href that 1. resulted in a contiguous rather than disjoint 95% kernel home-range polygon, and 2. contained no lacuna within the home range. 
+```{r}
+h.adhoc <- seq(from = 0.1, to = 0.9, by = 0.1) * pre.kd.href@h$h
+
+pre.kd.adhoc <- vector(mode = "list", length = length(h.adhoc))
+for (k in 1:length(h.adhoc)){
+  pre.kd.adhoc[[k]] <- kernelUD(pre.list$all.utm, 
+                                h = h.adhoc[k],  
+                                grid = 300,
+                                kern = "bivnorm")
+  
+}
+
+# make dataframes of vertices:
+pre.ver.95.adhoc <- lapply(pre.kd.adhoc, FUN = getverticeshr, percent = 95)
+
+pre.ver.95.adhoc.tmp <- lapply(pre.ver.95.adhoc, 
+                              FUN = spTransform, CRS = CRS("+proj=longlat"))
+
+pre.ver.95.adhoc.list <- lapply(pre.ver.95.adhoc.tmp,
+                               FUN = broom::tidy)
+
+for (k in 1:length(pre.ver.95.adhoc.list)){
+  pre.ver.95.adhoc.list[[k]] <- pre.ver.95.adhoc.list[[k]] %>% 
+    mutate(h = h.adhoc[k]) %>%
+    mutate(h.fac = as.factor(round(h, digits = 2)))
+}
+
+# rbind all:
+pre.ver.95.adhoc.df <- do.call("rbind", pre.ver.95.adhoc.list)
+
+p.h.adhoc.pre <- ggplot(data = pre.ver.95.adhoc.df,
+                    aes(x = long, y = lat,
+                        group = group)) + 
+  geom_polygon() + 
+  coord_map() + facet_grid(. ~ h.fac) +
+  facet_wrap( ~ h.fac, ncol = 3) + 
+  labs(x = "", y = "")
+
+plot(p.h.adhoc.pre)
+
+ggsave(filename = paste0("figures/HR_pre_h_comp_", Sys.Date(), ".png"),
+       plot = p.h.adhoc.pre,
+       dpi = 600,
+       device = "png")
+```
+
+Looking at these plots, h = 125 may be okay for the pre dataset? 
 
 ```{r}
 ## Section 3.1.2
@@ -337,50 +438,148 @@ Then the home range analysis starts here:
 
 #LSCV estimated band width is too small and home range becomes fragmented
 # so, I increased it to 100
-h <- 100
-pre.all.kd <- kernelUD(pre.all.utm, 
-                       h = h,  
-                       hlim = c(0.03, 1.5), 
-                       grid = 300,
-                       extent = 1,
-                       kern = "bivnorm")
+h.pre <- 125
 
-#plotLSCV(pre.all.kd)
-pre.Area.all <- kernel.area(pre.all.kd, 
-                            percent = c(50, 95),
-                            unin = c("m"),
-                            unout = c("km2"), 
-                            standardize = FALSE)
-#pre.Area.all
-# we should probably use the same bandwidth as the whole?
-pre.byID.kd <- kernelUD(pre.byID.utm, 
-                            h = pre.all.kd@h$h ,  
-                            hlim = c(0.03, 1.5), 
-                            grid = 300,
-                            extent = 1,
-                            kern = "bivnorm")
+pre.HR <- HR.bvnorm.fcn(pre.list$all.utm, 
+                        pre.list$byID.utm, 
+                        h = h.pre, 
+                        hlim=c(0.03, 1.5), 
+                        grid=300, extent = 1)
+pre.bw <- pre.HR$all.kd@h$h ##bandwidth estimate
 
-#plotLSCV(pre.byID.kd)
-pre.Area.byID <- kernel.area(pre.byID.kd, 
-                             percent = c(50, 95),
-                             unin = c("m"),
-                             unout = c("km2"), 
-                             standardize = FALSE)
-#pre.Area.selected
+pre.Area.50 <- pre.HR$area.all["50"]
+pre.Area.95 <- pre.HR$area.all["95"]
 
-pre.bw <- pre.all.kd@h$h ##bandwidth estimate
-pre.Area.50 <- round(pre.Area.all["50"],2)
-pre.Area.95 <- round(pre.Area.all["95"],2)
+pre.ver.50 <- getverticeshr(pre.HR$all.kd, 50)
+pre.ver.95 <- getverticeshr(pre.HR$all.kd, 95)
 
-pre.ver.50 <- getverticeshr(pre.all.kd, 50)
-pre.ver.95 <- getverticeshr(pre.all.kd, 95)
-
-plot(pre.ver.50, axes = TRUE)
-plot(pre.ver.95, axes = TRUE)
+# plot(pre.ver.50, axes = TRUE)
+# plot(pre.ver.95, axes = TRUE)
 #points(pre.all.utm, col="blue")
 
 ```
-Make a plot:
+
+
+Do the same for the post data - here we need to look at subsampling individuals. First, use all data.
+
+```{r}
+post.kd.adhoc <- vector(mode = "list", length = length(h.adhoc))
+for (k in 1:length(h.adhoc)){
+  post.kd.adhoc[[k]] <- kernelUD(post.list$all.utm, 
+                                h = h.adhoc[k],  
+                                grid = 300,
+                                kern = "bivnorm")
+  
+}
+
+# make dataframes of vertices:
+post.ver.95.adhoc <- lapply(post.kd.adhoc, FUN = getverticeshr, percent = 95)
+
+post.ver.95.adhoc.tmp <- lapply(post.ver.95.adhoc, 
+                              FUN = spTransform, CRS = CRS("+proj=longlat"))
+
+post.ver.95.adhoc.list <- lapply(post.ver.95.adhoc.tmp,
+                               FUN = broom::tidy)
+
+for (k in 1:length(post.ver.95.adhoc.list)){
+  post.ver.95.adhoc.list[[k]] <- post.ver.95.adhoc.list[[k]] %>% 
+    mutate(h = h.adhoc[k]) %>%
+    mutate(h.fac = as.factor(round(h, digits = 2)))
+}
+
+# rbind all:
+post.ver.95.adhoc.df <- do.call("rbind", post.ver.95.adhoc.list)
+
+p.h.adhoc.post <- ggplot(data = post.ver.95.adhoc.df,
+                    aes(x = long, y = lat,
+                        group = group)) + 
+  geom_polygon() + 
+  coord_map() + facet_grid(. ~ h.fac) +
+  facet_wrap( ~ h.fac, ncol = 3) + 
+  labs(x = "", y = "")
+
+plot(p.h.adhoc.post)
+
+ggsave(filename = paste0("figures/HR_post_h_comp_", Sys.Date(), ".png"),
+       plot = p.h.adhoc.post,
+       dpi = 600,
+       device = "png")
+```
+
+For post data, h = 100 may be okay?
+
+
+```{r}
+## Section 3.1.2
+##Visually optimized hlim = c(0.565,1.5), grid=300
+h.post <- 150
+post.HR <- HR.bvnorm.fcn(all.utm = post.list$all.utm, 
+                         byID.utm = post.list$byID.utm, 
+                         h = h.post, 
+                         hlim=c(0.03, 1.5), 
+                         grid=300, extent = 1)
+post.bw <- post.HR$all.kd@h$h ##bandwidth estimate
+
+post.Area.50 <- post.HR$area.all["50"]
+post.Area.95 <- post.HR$area.all["95"]
+
+post.ver.50 <- getverticeshr(post.HR$all.kd, 50)
+post.ver.95 <- getverticeshr(post.HR$all.kd, 95)
+
+# plot(post.ver.50, axes = TRUE)
+# plot(post.ver.95, axes = TRUE)
+#points(pre.all.utm, col="blue")
+```
+
+Select all possible combinations of 6 (ID.pre.min_n) individuals from the post data. There are 8008 possible combinations when min_n = 50. It takes a bit of time, I select 1000 of them. Because of the sample size decreases, I use h.pre for this.
+
+```{r}
+combos <- combn(1:dim(ID.post.min_n)[1], dim(ID.pre.min_n)[1]) 
+combos <- combos[, sample(1:ncol(combos), size = 1000)]
+IDs <- vector(mode = "list", length = ncol(combos))
+area.95 <- area.50 <- vector(mode = "numeric", length = ncol(combos))
+
+#p.list <- list()
+for (k in 1:ncol(combos)){
+  
+  ID.post.tmp <- ID.post.min_n[combos[,k], ]
+  tmp.list <- make.HR.dataset(post.all, ID.post.tmp, tagproj)
+  
+  tmp.HR <- HR.bvnorm.fcn(all.utm = tmp.list$all.utm,
+                          byID.utm = tmp.list$byID.utm,
+                          h = h.post,
+                          hlim=c(0.03, 1.5),
+                          grid=300, extent = 1)
+  
+  tmp.df <- broom::tidy(spTransform(getverticeshr(tmp.HR$all.kd, 95), 
+                               CRS("+proj=longlat"))) 
+                   
+  pts.df <- data.frame(lon = tmp.list$all.coords@coords[,1],
+                       lat = tmp.list$all.coords@coords[,2])
+  
+  # p.list[[k]] <- ggplot() + 
+  #   geom_polygon(data = tmp.df, aes(x = long, y = lat, group = group)) +
+  #   geom_point(data = pts.df, aes(x = lon, y = lat),
+  #              color = "green") + coord_map()
+
+  area.50[k] <- tmp.HR$area.all["50"]
+  area.95[k] <- tmp.HR$area.all["95"]
+
+  IDs[[k]] <- ID.post.tmp[,1]
+}
+
+areas.combos <- list(area95 = area.95,
+                     area50 = area.50,
+                     ID = IDs)
+
+saveRDS(areas.combos, file = "RData/areas_combos.rds")
+
+#readRDS(file = "RData/areas_combos.rds")
+
+```
+
+
+Make a plot for pre:
 ```{r}
 
 pre.ver.50.df <- broom::tidy(spTransform(pre.ver.50, CRS("+proj=longlat")))
@@ -406,10 +605,10 @@ map.pre.HR <- map.sdbay.zm +
                    group = group),
                fill = "red3",
                alpha = 0.6) + 
-  geom_point(data = pre.all,
-             aes(x = Lon1, y = Lat1),
-             alpha = 0.5,
-             size = 0.2)+ 
+  # geom_point(data = pre.all,
+  #            aes(x = Lon1, y = Lat1),
+  #            alpha = 0.5,
+  #            size = 0.2)+ 
   # geom_polygon(data = water.df,
   #              aes(x = long,
   #                  y = lat,
@@ -428,57 +627,7 @@ map.pre.HR <- map.sdbay.zm +
 #plot(map.pre.HR)
 ```
 
-Do the same for the post data - here we need to look at subsampling individuals. 
-
-
-```{r}
-## Section 3.1.2
-##Visually optimized hlim = c(0.565,1.5), grid=300
-
-post.all.kd <- kernelUD(post.all.utm, 
-                        h = h,  
-                        hlim = c(0.01, 1.5), 
-                        grid = 300,
-                        extent = 1,
-                        kern = "bivnorm")
-
-#plotLSCV(post.all.kd)
-post.Area.all <- kernel.area(post.all.kd, 
-                             percent = c(50, 95),
-                             unin = c("m"),
-                             unout = c("km2"), 
-                             standardize = FALSE)
-post.Area.all
-
-post.byID.kd <- kernelUD(post.byID.utm, 
-                         h = h,  
-                         hlim = c(0.03, 1.5), 
-                         grid = 300,
-                         extent = 1,
-                         kern = "bivnorm")
-
-#plotLSCV(post.selected.kd)
-post.Area.byID <- kernel.area(post.byID.kd, 
-                              percent = c(50, 95),
-                              unin = c("m"),
-                              unout = c("km2"), 
-                              standardize = FALSE)
-post.Area.byID
-
-post.bw <- post.all.kd@h$h ##bandwidth estimate
-post.Area.50 <- round(post.Area.all["50"],2)
-post.Area.95 <- round(post.Area.all["95"],2)
-
-post.ver.50 <- getverticeshr(post.all.kd, 50)
-post.ver.95 <- getverticeshr(post.all.kd, 95)
-
-plot(post.ver.50, axes = TRUE)
-plot(post.ver.95, axes = TRUE)
-#points(pre.all.utm, col="blue")
-```
-
-
-Make a plot:
+Make a plot for post using all data:
 ```{r}
 
 post.ver.50.df <- broom::tidy(spTransform(post.ver.50, CRS("+proj=longlat")))
@@ -504,11 +653,11 @@ map.post.HR <- map.sdbay.zm +
                    group = group),
                fill = "red3",
                alpha = 0.6) + 
-  geom_point(data = post.all,
-             aes(x = Lon1, y = Lat1),
-             alpha = 0.5,
-             size = 0.2)+ 
-  # geom_polygon(data = water.df,
+  # geom_point(data = post.all,
+  #            aes(x = Lon1, y = Lat1),
+  #            alpha = 0.5,
+  #            size = 0.2)+ 
+  # # geom_polygon(data = water.df,
   #              aes(x = long,
   #                  y = lat,
   #                  group = group),
